# DG_Burgers

./: 1D-Euler-app.cpp  1D_Burgers.cpp  1D_Burgers_3x.cpp  1D_Burgers_RK4.cpp  1D_Euler.cpp  1D_Euler_Smooth.cpp  1D_Euler_Sod_try2.cpp  1D_Euler_Sod_try3.cpp  2D-Euler-adjoint-app.cpp  2D-Euler-app.cpp  2D-Euler-discrete-adjoint-app.cpp  CMakeLists.txt  burgers_pinn.py  burgers_pinn_jax.py  compare_euler.py  deform-mesh-app.cpp  example-app.cpp  inputs.xml  inputs2d.xml  inputs2d_naca.xml  makefile  module.mk  naca0012_quad.geo  naca0012_quad.msh  optimize.py  pinn-app.cpp  pltbases.py  pltnewbasis.py  pltresult.py  pltresult_euler.py  run_optimization.py  run_optimization.sh  shape-gradient-app.cpp  truncation-error-app.cpp  vortex_quad.geo  vortex_quad.msh
plans/: 2d_euler_dg_solver_6cd953fe.plan.md  gpu_cuda_dg_solver_170c40da.plan.md  naca0012_euler_simulation_78f1de3b.plan.md
platforms_cmake/: work_laptop.cmake
src/: Polylib.cpp  Polylib.h  adjoint2d_gpu.cu  adjoint2d_gpu.h  basis.cpp  basis.h  basis_functions.cpp  basis_functions.h  basis_poly.cpp  basis_poly.h  discrete_adjoint2d_gpu.cu  discrete_adjoint2d_gpu.h  euler2d.cpp  euler2d.h  euler2d_gpu.cu  euler2d_gpu.h  geom2d.cpp  geom2d.h  hicks_henne.cpp  hicks_henne.h  io.cpp  io.h  mesh2d.cpp  mesh2d.h  mesh_deform.cpp  mesh_deform.h  p_adapt.cpp  p_adapt.h  shape_sensitivity.cu  shape_sensitivity.h
